Expose new options for API Gateway's High Availability feature (#1261)
* Add null deployment block to managed gateway class config

* Consume new deployment block in GatewayClassConfig template

* Clean up docstrings

* Gate each deployment config value independently

* Chomp unnecessary whitespace, prevent empty deployment block

* Add changelog entry

* Apply suggestions from code review

Co-authored-by: Iryna Shustava <ishustava@users.noreply.github.com>

* Simplify usage of deployment config values

* Add bats tests for API Gateway's GatewayClassConfig

Co-authored-by: Iryna Shustava <ishustava@users.noreply.github.com>

--- a/charts/consul/templates/api-gateway-gatewayclassconfig.yaml
+++ b/charts/consul/templates/api-gateway-gatewayclassconfig.yaml
@@ -28,6 +28,10 @@ spec:
     {{- else }}
       http: 8500
     {{- end }}
+  {{- with .Values.apiGateway.managedGatewayClass.deployment }}
+  deployment:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   image:
     consulAPIGateway: {{ .Values.apiGateway.image }}
     envoy: {{ .Values.global.imageEnvoy }}
