--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -2708,6 +2708,20 @@ apiGateway:
       # @type: string
       service: null
 
+    # This value defines the number of pods to deploy for each Gateway as well as a min and max number of pods for all Gateways
+    #
+    # Example:
+    #
+    # ```yaml
+    # deployment:
+    #   defaultInstances: 3
+    #   maxInstances: 8
+    #   minInstances: 1
+    # ```
+    #
+    # @type: map
+    deployment: null
+
   # Configuration for the ServiceAccount created for the api-gateway component
   serviceAccount:
     # This value defines additional annotations for the client service account. This should be formatted as a multi-line
