Enable configure Connect Injector and Controller Webhooks to be managed by Vault (#1191)
* refactored TestVault

* Fixing name of CreateConnectCARootAndIntermediatePIKPolicy to CreateConnectCARootAndIntermediatePKIPolicy

* refactored all except WAN Fed has error

* fixing vault wan fed test

* comment formatting

* PR Feedback.  Moving vault helper functions to be on the structs they were taking as arguments.

* PR Feedback.  changing name of Save() onkv2secret to something moredescriptive.  adding comment string.

* Do not load webhook cert manager when vault is enabled.

* do not mount volumes when using vault

* configuring vault injector

* Fixing linting

* Pods are all running

* Fixing cert-dir paths for vault and non-vault use

* fixing volume mount

* fixing volume mount again

* adding bats tests for tls cert directory

* fixing cert for tls-cert dir

* Adding logic to tests for controller tls cert.  also adding snapshot agent and vault namespaces tests

* it works...with hardocded stuff...need to refactor from here

* refactoring out the updating of the webhook config

* adding missing file

* adding tests for webhook-cert-manager

* refining webhook cert manager to remove setting of global.enablePodSecurityPolicies

* adding connect-inject bats tests

* adding test for controller and use of resource-prefix

* adding tests for mwc update code

* configure controller to only update mwc with ca bundle when using vault as a secrets backend.

* configure connect inject to only update mwc with ca bundle when using vault as a secrets backend.

* fixing lint errors for unnahdled errors

* embedding tlsCertDir for controller and connectInject under vault in values.yaml

* embedding tlsCertDir for controller and connectInject under vault in values.yaml - fixing tests

* change vault role for controller to come from global.secretsBackend.vault.consulControllerCARole

* fixing vault namespaces and snap

--- a/charts/consul/templates/connect-inject-clusterrole.yaml
+++ b/charts/consul/templates/connect-inject-clusterrole.yaml
@@ -33,6 +33,17 @@ rules:
   - get
   - list
   - update
+{{- if (and .Values.global.secretsBackend.vault.enabled .Values.global.secretsBackend.vault.connectInjectRole .Values.global.secretsBackend.vault.connectInject.tlsCert.secretName  .Values.global.secretsBackend.vault.connectInject.caCert.secretName)}}
+- apiGroups:
+  - admissionregistration.k8s.io
+  resources:
+  - mutatingwebhookconfigurations
+  verbs:
+  - get
+  - list
+  - watch
+  - patch
+{{- end }}
 {{- if .Values.global.enablePodSecurityPolicies }}
 - apiGroups: [ "policy" ]
   resources: [ "podsecuritypolicies" ]
