--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,8 @@ on:
 
 env:
   TEST_RESULTS: /tmp/test-results # path to where test results are saved
-  CONSUL_VERSION: 1.12.0 # Consul's OSS version to use in tests
-  CONSUL_ENT_VERSION: 1.12.0+ent # Consul's enterprise version to use in tests
+  CONSUL_VERSION: 1.13.0-alpha1 # Consul's OSS version to use in tests
+  CONSUL_ENT_VERSION: 1.13.0-alpha1+ent # Consul's enterprise version to use in tests
   GOTESTSUM_VERSION: 1.6.4 # You cannot use environment variables with workflows. The gotestsum version is hardcoded in the reusable workflows too.
 
 jobs:
@@ -146,8 +146,9 @@ jobs:
         working-directory: control-plane
         run: |
           mkdir -p $HOME/bin
-          wget https://github.com/ndhanushkodi/binaries/releases/download/v3oss/consul -O consulbin && \
-            mv consulbin $HOME/bin/consul &&
+          wget https://releases.hashicorp.com/consul/${{env.CONSUL_VERSION}}/consul_${{env.CONSUL_VERSION}}_linux_amd64.zip && \
+            unzip consul_${{env.CONSUL_VERSION}}_linux_amd64.zip -d $HOME/bin && \
+            rm consul_${{env.CONSUL_VERSION}}_linux_amd64.zip
           chmod +x $HOME/bin/consul
 
       - name: Run go tests
@@ -193,9 +194,10 @@ jobs:
       - name: Download consul
         working-directory: control-plane
         run: |
-            mkdir -p $HOME/bin
-            wget https://github.com/ndhanushkodi/binaries/releases/download/v3ent/consul -O consulbin && \
-              mv consulbin $HOME/bin/consul &&
+          mkdir -p $HOME/bin
+          wget https://releases.hashicorp.com/consul/${{env.CONSUL_ENT_VERSION}}/consul_${{env.CONSUL_ENT_VERSION}}_linux_amd64.zip && \
+            unzip consul_${{env.CONSUL_ENT_VERSION}}_linux_amd64.zip -d $HOME/bin && \
+            rm consul_${{env.CONSUL_ENT_VERSION}}_linux_amd64.zip
             chmod +x $HOME/bin/consul
 
       - name: Run go tests
