Allow building arm64 dev docker images (#1283)
When using kind on an arm64 architecture locally
and installing consul-k8s with tproxy,
the service-mesh init container will fail to apply iptables rules.
This is because kind is running on an arm64 architecture but uses
amd64 docker image for consul-k8s. If we switch to arm64 images instead,
the error goes away.

--- a/control-plane/Makefile
+++ b/control-plane/Makefile
@@ -34,6 +34,7 @@ ci.dev-docker:
 	@echo "Building consul-k8s Development container - $(CI_DEV_DOCKER_IMAGE_NAME)"
 	@docker build -t '$(CI_DEV_DOCKER_NAMESPACE)/$(CI_DEV_DOCKER_IMAGE_NAME):$(GIT_COMMIT)' \
 	--target=dev \
+	--build-arg ARCH=amd64 \
 	--label COMMIT_SHA=$(CIRCLE_SHA1) \
 	--label PULL_REQUEST=$(CIRCLE_PULL_REQUEST) \
 	--label CIRCLE_BUILD_URL=$(CIRCLE_BUILD_URL) \
