Update mesh CRD with MeshHTTPConfig. (#1282)
* Update mesh CRD with MeshHTTPConfig.

--- a/charts/consul/templates/crd-meshes.yaml
+++ b/charts/consul/templates/crd-meshes.yaml
@@ -55,6 +55,14 @@ spec:
           spec:
             description: MeshSpec defines the desired state of Mesh.
             properties:
+              http:
+                description: HTTP defines the HTTP configuration for the service mesh.
+                properties:
+                  sanitizeXForwardedClientCert:
+                    type: boolean
+                required:
+                - sanitizeXForwardedClientCert
+                type: object
               tls:
                 description: TLS defines the TLS configuration for the service mesh.
                 properties:
