--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -31,9 +31,8 @@ global:
 
   # [Experimental] Configures the Cluster Peering feature. Requires Consul v1.13+ and Consul-K8s v0.45+.
   peering:
-    # If true, the Helm chart will enable Cluster Peering for the cluster. This will enable peering controllers and
-    # allow use of the PeeringAcceptor and PeeringDialer CRDs to establish peerings for service mesh.
-    # @type boolean
+    # If true, the Helm chart enables Cluster Peering for the cluster. This option enables peering controllers and
+    # allows use of the PeeringAcceptor and PeeringDialer CRDs for establishing service mesh peerings.
     enabled: false
 
   # [Enterprise Only] Enabling `adminPartitions` allows creation of Admin Partitions in Kubernetes clusters.
