Add custom annotations support for catalog sync and connectInject pods via Helm (#775)
* Add custom annotations support for catalog sync and connectInject pods via Helm

--- a/charts/consul/templates/connect-inject-deployment.yaml
+++ b/charts/consul/templates/connect-inject-deployment.yaml
@@ -40,6 +40,9 @@ spec:
         component: connect-injector
       annotations:
         "consul.hashicorp.com/connect-inject": "false"
+        {{- if .Values.connectInject.annotations }}
+        {{- tpl .Values.connectInject.annotations . | nindent 8 }}
+        {{- end }}
         {{- if (and .Values.global.secretsBackend.vault.enabled .Values.global.tls.enabled) }}
         "vault.hashicorp.com/agent-init-first": "true"
         "vault.hashicorp.com/agent-inject": "true"
