Updating values docs to only set  global.federation.primaryDatacenter outside of the primary datacenter. (#1318)

--- a/charts/consul/values.yaml
+++ b/charts/consul/values.yaml
@@ -534,7 +534,8 @@ global:
     # `<helm-release-name>-consul-federation`.
     createFederationSecret: false
 
-    # The name of the primary datacenter.
+    # The name of the primary datacenter.  This should only be set for datacenters
+    # that are not the primary datacenter.
     # @type: string
     primaryDatacenter: null
 
